--- a/05.03.2025/index.html
+++ b/05.03.2025/index.html
@@ -19,7 +19,7 @@
             width: 100%;
             max-width: 1000px;
             margin: auto;
-            background-color: #ffffff;
+            background-color: #cae9ff;
             padding: 20px;
             border: 2px solid black;
         }
@@ -54,9 +54,9 @@
         }
         .content .box {
             flex: 1;
-            height: 150px;
+            height: 180px;
             border: 2px solid black;
-            background-color: white;
+            background-color: #cae9ff;
         }
         .footer {
             display: flex;
@@ -65,9 +65,9 @@
         }
         .footer .box {
             flex: 1;
-            height: 100px;
+            height: 90px;
             border: 2px solid black;
-            background-color: white;
+            background-color: #cae9ff;
         }
     </style>
 </head>
@@ -83,15 +83,16 @@
             <img src="WhatsApp Image 2025-03-05 at 22.50.54_0620076a.jpg" alt="Image" style="width: 100px; height: auto; border-radius: 50%;">
         </div>
         <div class="main">
-            <div class="nav-bar"></div>
+            <div class="nav-bar"><center><p>EDUCATION IN SCHOOL AND COLLEGES</p></center></div>
             <div class="content">
-                <div class="box"> </div>
-                <div class="box"></div>
+                <div class="box"><p>A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students under the direction of teachers. Education is an organized system of learning that is not limited to just knowledge from books, but can also be obtained through practical experiences outside of the classroom. Education is concerned with methods of teaching and learning in schools or school-like environments. A school is a community of learners: a group that comes together to learn with and from each other.
+                </p></div>
+                <div class="box"><p>British Education System and the U.S. Education System are the most pronounced one's in the world, therefore many nations follow one or the other or  mixture of both educational systems. This is primarily because of the influence of the British Colonial Polices in most parts of the world. Wherever, Britishers established their colonies, they introduce their own education policies in their slave countries. While some countries imitate the U.S. system of education and others see it fit to have a bit of both. </p></div>
             </div>
             <div class="footer">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <div class="box"><center><p>TECHNICAL SKILLS:<br>1.HTML<br>2.CSS<br>3.PYTHON</p></center></div>
+                <div class="box"><center><p>TECHNICAL SKILLS:<br>1.CHESS<br>2.CARROM<br>3.LUDO</p></center></div>
+                <div class="box"><center><p>TECHNICAL SKILLS:<br>1.WATCHING MOVIES<br>2.LISTENING MUSIC<br>3.EATING FOOD</p></center></div>
             </div>
         </div>
     </div>
